# agent-tui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agent_tui/: __main__.py  app.py  app.tcss  config.py  history.py  server.py  sources.py  state.py
cursor_tui/: __main__.py  app.py  app.tcss  config.py  server.py  sources.py
