[project]
name = "agent-tui"
version = "0.1.0"
description = "Live TUI dashboard for cursor-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
]

[project.optional-dependencies]
remote = ["asyncssh>=2.17.0"]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.400",
    "textual-dev>=1.0.0",
    "pytest>=8.0",
]

[project.scripts]
agent-tui = "agent_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["agent_tui"]

[tool.ruff.format]
quote-style = "double"

# ── Pyright ──────────────────────────────────────────────────────────────────
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
